took out html boilerplate and just did notes.

--- a/designchallenge1.html
+++ b/designchallenge1.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>
-    </title>
-  </head>
-  <body>
-  <h1>question</h1>
-  <p>answer</p>
-  <a>site links</a>
-  <img>image links</img>
-  
-  </body>
-</html>
+simple notes:
+
+http://coombearchitecture.com/
+Coombe Architecture
+While I understand the playful nature of this designer's website, I did find it to be a bit much.  Nick Coombe is an architect who specializes in museum exhibitions and his website flows like one.  The user is greeted with a wall of text starting with the architect's contact info, his works, a description of his firm, his bio, awards and then photos of his exhibits, all while scrolling from left to right.  There is very little hierarchy except for the names of his project and awards but it does seem visually balanced with the photos arranged in a wave pattern as it scrolls left-to-right.
+
+http://www.arko.co.nz/
+Arko
+
