--- a/designchallenge1.html
+++ b/designchallenge1.html
@@ -1,9 +1,31 @@
-simple notes:
+<!DOCTYPE html>
+<html>
+<head><title>Design Challenge 1</title></head>
+<body>
+<h1>Which two websites are you inspired by?:</h1>
 
-http://coombearchitecture.com/
-Coombe Architecture
-While I understand the playful nature of this designer's website, I did find it to be a bit much.  Nick Coombe is an architect who specializes in museum exhibitions and his website flows like one.  The user is greeted with a wall of text starting with the architect's contact info, his works, a description of his firm, his bio, awards and then photos of his exhibits, all while scrolling from left to right.  There is very little hierarchy except for the names of his project and awards but it does seem visually balanced with the photos arranged in a wave pattern as it scrolls left-to-right.
+<p><a href="http://coombearchitecture.com">Coombe Architecture</a></p>
 
-http://www.arko.co.nz/
-Arko
+<p>Going by the website, Nick Coombe is an architect who specializes in museum exhibitions and<br> his website flows like one.  It eschews the tradtional downward-scrolling format of a website and<br> decides to take the user through an exhibtion of its own.  Clever, but not very practical.</p> 
+
+<p><a href="http://www.arko.co.nz/">Arko</a></p>
+<p>A simple, yet elegant website with an easy flow and functionality.</p> 
+
+<p>(both were found via <a href="www.siteinspire.com">siteinspire</a>)</p>
+
+<h1>>How do they exhibit effective use of space, size or balance?</h1>
+<p>>In order to disply its photos in a side-scrolling environment without putting the user to<br> sleep, Coombe Architecture displays its photos in a wave pattern, rising and falling from one<br> photo to the next.  This display helps maintain an overall visual balance between positive and<br> negative space while focusing on the exhibition photos.</p>
+
+<p>On the Arko Page, 
+
+<h1>What makes them similar and different?</h1>
+<p>They are similar in the sense that both sites want you to view their work, but they go about it<br> in different ways.  Coombe has a more playful approach however it's not very practical. <br> You are greeted with a wall of text with his ocntact info at the very front of the page.  If you<br> make it to the end, you do have to scroll all the way back to the left in order to find his contact info.</p>>
+
+<p>On the Arko page, not only does it flow easily from project-to-project, but you can access any<br> point of the page from anywhere.  The navigation is simple, yet effective and at any <br>time you can contact Arko by looking at the footer.  A much more functional website.</p>
+
+
+<p>And now, with my very limited knowledge of design, I will try to re-work the Coombe<br> Architecture website:</p>
+<img src=Diagram1.jpeg>
+</body>
+</html>
 
