some simple edits

--- a/designchallenge1.html
+++ b/designchallenge1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Design Challenge 1</title></head>
+<head><title>Keith Knox's Design Challenge 1</title></head>
 <body>
 <h1>Which two websites are you inspired by?:</h1>
 
@@ -13,13 +13,13 @@
 
 <p>(both were found via <a href="www.siteinspire.com">siteinspire</a>)</p>
 
-<h1>>How do they exhibit effective use of space, size or balance?</h1>
-<p>>In order to disply its photos in a side-scrolling environment without putting the user to<br> sleep, Coombe Architecture displays its photos in a wave pattern, rising and falling from one<br> photo to the next.  This display helps maintain an overall visual balance between positive and<br> negative space while focusing on the exhibition photos.</p>
+<h1>How do they exhibit effective use of space, size or balance?</h1>
+<p>In order to disply its photos in a side-scrolling environment without putting the user to<br> sleep, Coombe Architecture displays its photos in a wave pattern, rising and falling from one<br> photo to the next.  This display helps maintain an overall visual balance between positive and<br> negative space while focusing on the exhibition photos.</p>
 
 <p>On the Arko Page, 
 
 <h1>What makes them similar and different?</h1>
-<p>They are similar in the sense that both sites want you to view their work, but they go about it<br> in different ways.  Coombe has a more playful approach however it's not very practical. <br> You are greeted with a wall of text with his ocntact info at the very front of the page.  If you<br> make it to the end, you do have to scroll all the way back to the left in order to find his contact info.</p>>
+<p>They are similar in the sense that both sites want you to view their work, but they go about it<br> in different ways.  Coombe has a more playful approach however it's not very practical. <br> You are greeted with a wall of text with his ocntact info at the very front of the page.  If you<br> make it to the end, you do have to scroll all the way back to the left in order to find his contact info.</p>
 
 <p>On the Arko page, not only does it flow easily from project-to-project, but you can access any<br> point of the page from anywhere.  The navigation is simple, yet effective and at any <br>time you can contact Arko by looking at the footer.  A much more functional website.</p>
 
