made some edits

--- a/designchallenge1.html
+++ b/designchallenge1.html
@@ -16,10 +16,10 @@
 <h1>How do they exhibit effective use of space, size or balance?</h1>
 <p>In order to disply its photos in a side-scrolling environment without putting the user to<br> sleep, Coombe Architecture displays its photos in a wave pattern, rising and falling from one<br> photo to the next.  This display helps maintain an overall visual balance between positive and<br> negative space while focusing on the exhibition photos.</p>
 
-<p>On the Arko Page,it has a very Zen-like quality to it.  White background is contrasts with<br> black type.  Because this background is so simple, it tends to fade away and make the photos<br> really stand out.  </p>
+<p>The Arko Page,it has a very Zen-like quality to it.  The white background contrasts with<br> black type.  Because this background is so simple, it tends to fade away and make the photos<br> really stand out.  Not bad for a concrete company.</p>
 
 <h1>What makes them similar and different?</h1>
-<p>They are similar in the sense that both sites want you to view their work, but they go about it<br> in different ways.  Coombe has a more playful approach, however it's not very practical. <br> You are greeted with a wall of text with his contact info at the very front of the page.  If you<br> make it to the end, you do have to scroll all the way back to the left in order to find his contact info.</p>
+<p>They are similar in the sense that both sites want you to view their work, but they go about it<br> in different ways.  Coombe has a more playful approach, however it's not very practical. <br> You are greeted with a wall of text with contact info at the very front of the page.  If you<br> make it to the end, you do have to scroll all the way back to the left in order to find his contact info.</p>
 
 <p>On the Arko page, not only does it flow easily from project-to-project, but you can access any<br> point of the page from anywhere.  The navigation is simple, yet effective and at any <br>time you can contact Arko by looking at the footer.  A much more functional website.</p>
 
@@ -28,7 +28,7 @@
 <img src=Diagram1.jpeg>
 <p>Putting a small photo gallery on the home page is my plan to grab the user's attention. If the user likes what they see, they will instinctually scroll down and see my firm's logo and after that the essentials of the web page (projects/awards/bio).  The plan is also to keep contact info and social media links in the footer so that the user never loses track of how to contact me. </p>
 <img src = "Diagram2.jpeg">
-<p>Project page would not radically different from the main page with the gallery being the focal point of the page.  You would be able to click on any gallery slide and get a brief summary of the project being displayed.  To the left you would be able to access other projects based on title (in case the user is looking for a certian project) and below that would be additional thumbnail views of the associated photos.This page should have an equal balance of words and photos since the idea to is describe to the user what they are seeing.</p>
+<p>Project page would not radically differ from the main page with the gallery being the focal point of the page.  You would be able to click on any gallery slide and get a brief summary of the project being displayed.  To the left you would be able to access other projects based on title (in case the user is looking for a certian project) and below that would be additional thumbnail views of the associated photos.This page should have an equal balance of text and photos since the idea to is describe to the user what they are seeing.</p>
 <img src= "Diagram3.jpeg">
 <p>The awards page, would be a little something of a departure.  I would feature key phrases from a positive review with an image thumbnail linking to the correlating project to the right or left of the quote.  This would be a departure from the other pages since this time the focus of the page is now on words instead of images.</p>
 
