--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World!</h1>
-<p>I'm hosted with GitHub pages.</p>
-</body>
+  <head>
+    <meta charset="ISO-8859-1">
+      <title>Keith Knox Portfolio</title>
+  </head>
+  <body>
+        <h1>Keith Knox</h1>
+          <main>
+            <img src = "bwprofile.jpeg" alt="bw photo">
+            <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Asssembly since March 2015 and I am planning to graduate in June 2015.  Please follow my links below for more info.</p>
+            <a href = "https://github.com/keithknox" target="github">My Github Account</a>
+            <a href = "https://www.linkedin.com/in/keithwknox" target = "linkedin">My Linkedin Profile</a>
+            <a href = "https://twitter.com/KeithKnoxKnox" target="twitter">My Twitter Profile</a>
+        </main>
+  </body>
 </html>
