changes up to step 6

--- a/index.html
+++ b/index.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="utf-8">
       <title>Keith Knox Portfolio</title>
+      <style>
+      *
+        {
+        margin:0;
+        border:0;
+        padding:0;
+        border-collapse:collapse;
+        border-spacing:0;
+        font-weight:inherit;
+        font-size:inherit;
+        font-style:inherit;
+        color:inherit;
+        background-color:transparent;
+        box-sizing:border-box;
+        font-family:inherit;
+        a:inherit;
+        }
+      </style>
+      <link rel="stylesheet" type="text/css" href="assets/themes.css">
   </head>
   <body>
-        <h1>Keith Knox</h1>
-          <main>
-            <img src = "bwprofile.jpeg" alt="bw photo">
-            <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Asssembly since March 2015 and I am planning to graduate in June 2015.  Please follow my links below for more info.</p>
-            <a href = "https://github.com/keithknox" target="github">My Github Account</a>
-            <a href = "https://www.linkedin.com/in/keithwknox" target = "linkedin">My Linkedin Profile</a>
-            <a href = "https://twitter.com/KeithKnoxKnox" target="twitter">My Twitter Profile</a>
-        </main>
+      <header>Keith Knox</header>
+      <main>
+        <img src = "assets/profile.jpeg" alt="bw photo">
+        <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Asssembly since March 2015 and I am planning to graduate in June 2015.  Please follow my links below for more info.</p>
+      </main>
+      <footer>    
+        <a href = "https://github.com/keithknox" class = "btn" target="github">My Github Account</a>
+        <a href = "https://www.linkedin.com/in/keithwknox" class="btn" target = "linkedin">My Linkedin Profile</a>
+        <a href = "https://twitter.com/KeithKnoxKnox" class="btn" target="twitter">My Twitter Profile</a>
+        <a href="mailto:keithwknox@gmail.com?Subject=Hello" class="btn" target="email">Send me an email</a>
+      </footer>
   </body>
 </html>
