--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         }
       </style>
       <link rel="stylesheet" type="text/css" href="assets/themes.css">
+      <link rel="stylesheet" type="text/css" href="assets/large.css">
   </head>
   <body>
       <header>Keith Knox</header>
