--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <header>Keith Knox</header>
       <main>
         <img src = "assets/profile.jpeg" alt="bw photo">
-        <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Asssembly since March 2015 and I am planning to graduate in June 2015.  Please follow my links below for more info.</p>
+        <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Assembly since March 2015 and I am planning to graduate in June 2015.  Please follow my links below for more info.</p>
       </main>
       <footer>
         <a href = "https://github.com/keithknox" class = "btn" target="github">My Github Account</a>
