--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Assembly since March 2015 and graduated in June 2015.  Please follow my links below for more info.</p>
       </main>
       <footer>
-        <a href = "projects.html" class = "btn" target="github">Projects</a>
+        <a href = "projects.html" class = "btn">Projects</a>
         <a href = "https://github.com/keithknox" class = "btn" target="github">My Github Account</a>
         <a href = "https://www.linkedin.com/in/keithwknox" class="btn" target = "linkedin">My Linkedin Profile</a>
         <a href = "https://twitter.com/KeithKnoxKnox" class="btn" target="twitter">My Twitter Profile</a>
