--- a/projects.html
+++ b/projects.html
@@ -33,11 +33,16 @@
       <p>This project was a group effort in my General Assembly class that combined 3 developers and one designer from the User Experience class.  The focus of the project was to tell a story and our designer proposed the idea of creating a forum for people with invisible illnesses.  Users could personal stories, find links for more information and even contrbute to a charity if they wished to do so.  My role was taking the designers proofs and creating the front-end style for the page, which was tricky because we hadn't learned any Javascript yet.  All the animations and layout were done in CSS over the course of two days.  I am pretty proud of this project because we worked well as a team and met the "client's" expectations with what little front-end skill we had at that time.
 </p>
 <img src = 'assets/invisibleillness.png'>
-    </div>
+<div class = "next">
+  <a href="projects2.html" class="btn" >Next</a>
+</div>
+
   </main>
 
+
+
   <footer>
-    <a href="index.html" class="btn" >Main</a>
+    <a href="index.html" class="btn" >Home</a>
     <a href = "https://github.com/keithknox" class = "btn" target="github">My Github Account</a>
     <a href = "https://www.linkedin.com/in/keithwknox" class="btn" target = "linkedin">My Linkedin Profile</a>
     <a href = "https://twitter.com/KeithKnoxKnox" class="btn" target="twitter">My Twitter Profile</a>
