--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
       <header>Keith Knox</header>
       <main>
-        <img src = "assets/profile.jpeg" alt="bw photo">
+        <img src = "assets/headshot1.jpg" alt="bw photo">
         <p>I am a former payroll accountant looking to make the leap into full stack web development.  I have been a student at General Assembly since March 2015 and graduated in June 2015.  Please follow my links below for more info.</p>
       </main>
       <footer>
