--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
   <header>Keith Knox</header>
   <main>
 
-    <div class = "invisibleillness">
+    <div class = "project_description">
       <h1>Invisible Illness</h1>
       <h3>Link: <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank">https://salty-journey-2304.herokuapp.com/</a></h3>
       <p>This project was a group effort in my General Assembly class that combined 3 developers and one designer from the User Experience class.  The focus of the project was to tell a story and our designer proposed the idea of creating a forum for people with invisible illnesses.  Users could personal stories, find links for more information and even contrbute to a charity if they wished to do so.  My role was taking the designers proofs and creating the front-end style for the page, which was tricky because we hadn't learned any Javascript yet.  All the animations and layout were done in CSS over the course of two days.  I am pretty proud of this project because we worked well as a team and met the "client's" expectations with what little front-end skill we had at that time.
