--- a/projects3.html
+++ b/projects3.html
@@ -28,15 +28,15 @@
   <main>
 
     <div class = "project_description">
-      <h1>Keith's Cookbook</h1>
-      <h3>Link: <a href = "https://lit-bayou-1476.herokuapp.com/" target="_blank">https://lit-bayou-1476.herokuapp.com/</a></h3>
-      <p>This was my final project for General Assembly.  It is a Ruby on Rails app that allows users to upload recipes and comment on them.  This was the first time I was implementing Ajax and jQuery on a project as well as trying out the Materialize CSS framework.  The Ajax calls can be seen when you add comments to the recipes without a page reload.  It may be simple, but I'm still very proud of this app since it has shown how far I have come since starting General Assembly in March.
+      <h1>Vineyard Itinerary</h1>
+      <h3>Link: <a href = "https://pacific-plains-7067.herokuapp.com/" target="_blank">https://pacific-plains-7067.herokuapp.com/</a></h3>
+      <p>This was my third project for General Assembly and the idea was to create a map of vineyards in the Shenandoah Valley and choose to add them to an itinerary so that they could create their own wine tour.  It was to incorporate the Google Maps API and the vineyards would come from the Yelp API.  I got the Yelp API working, but didn't have much luck plotting the points on Google Maps.  The one thin I was proud of was being able to seed my database with the Yelp data by using a "bounding box" function.  Since the Shenandoah Valley is not a metropolitan area, I had to define where to look for these vineyards and I'm proud of the results.
 </p>
-<img src = 'assets/cookbook.png'>
+<img src = 'assets/vineyard.png'>
     </div>
 
     <div class = "next">
-      <a href="projects3.html" class="btn" >Next</a>
+      <a href="index.html" class="btn" >Home</a>
     </div>
 
   </main>
