edited project descriptions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <div class = "slide">
                   <div class = "slide-copy">
                       <h2>Invisible Illness</h2>
-                      <p>This project was a group effort in my General Assembly class that combined 3 developers and one designer from the User Experience class.  The focus of the project was to tell a story and our designer proposed the idea of creating a forum for people with invisible illnesses.  Users could personal stories, find links for more information and even contrbute to a charity if they wished to do so.  My role was taking the designers proofs and creating the front-end style for the page, which was tricky because we hadn't learned any Javascript yet.  All the animations and layout were done in CSS over the course of two days.  I am pretty proud of this project because we worked well as a team and met the "client's" expectations with what little front-end skill we had at that time.</p>
+                      <p>A group effort combining 3 developers and one designer from the General Assembly User Experience class, the focus of the project was to tell the stories of people with invisible illnesses. Users could post personal stories, find links for more information and even contribute to a charity if they wished to do so.  This was before learning javascript and therefore I had to take the designer’s proofs and create a front-end using solely CSS layouts and animation.  I am proud of this project because the team worked well together and met the "client's" expectations with the minimal front-end experience we had at that time.</p>
                   </div>
                   <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank"><img src = "img/invisibleillness.png" alt = "Prev"></a>
               </div>
@@ -43,7 +43,7 @@
               <div class = "slide">
                   <div class = "slide-copy">
                       <h2>Vineyard Itinerary</h2>
-                      <p>This was my third project for General Assembly and the idea was to create a map of vineyards in the Shenandoah Valley and choose to add them to an itinerary so that they could create their own wine tour.  It was to incorporate the Google Maps API and the vineyards would come from the Yelp API.  I got the Yelp API working, but didn't have much luck plotting the points on Google Maps.  The one thing I was proud of was being able to seed my database with the Yelp data by using a "bounding box" function.  Since the Shenandoah Valley is not a metropolitan area, I had to define where to look for these vineyards and I'm proud of the results.</p>
+                      <p>Creating a map of vineyards in the Shenandoah Valley was my third project for General Assembly. Using both the Google Maps and Yelp APIs, the goal of the site was to allow users to add entries from the Yelp API to a Google map and create a custom wine tour.  Though the Google Maps portion proved to be a little difficult with the deadline given, I was able get a deeper understanding of the Yelp API using the "bounding box" function since the Shenandoah Valley is not a metropolitan area.  This project definitely aided in my overall comprehension of APIs.</p>
                   </div>
                   <a href = "https://pacific-plains-7067.herokuapp.com/" target="_blank"><img src = "img/vineyard.png" alt = "Prev"></a>
               </div>
@@ -51,7 +51,7 @@
               <div class = "slide">
                   <div class = "slide-copy">
                       <h2>Keith's Cookbook</h2>
-                      <p>This was my final project for General Assembly.  It is a Ruby on Rails app that allows users to upload recipes and comment on them.  This was the first time I was implementing AJAX and jQuery on a project as well as trying out the Materialize CSS framework.  The AJAX calls can be seen when you add comments to the recipes without a page reload.  It may be simple, but I'm still very proud of this app since it has shown how far I have come since starting General Assembly in March.</p>
+                      <p>My final project for General Assembly, a Ruby on Rails app that enables users to upload and comment on recipes.  This was my first time implementing AJAX and jQuery on a project as well as experimenting with the Materialize CSS framework. The AJAX functionality can be seen when you add comments to the recipes without a page reload. Though not as robust as other websites, I am very proud of this app and shows how far I have come since starting General Assembly in March.</p>
                   </div>
                   <a href = "https://lit-bayou-1476.herokuapp.com/" target="_blank"><img src = "img/cookbook.png" alt = "Prev"></a>
               </div>
