fixed the contacts buttons for phones

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>The Portfolio of Keith Knox</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="css/style.css">      
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
       <script src="js/script.js"></script>
       <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
@@ -34,26 +35,26 @@
           <div id = "slider">
               <div class = "slide">
                   <div class = "slide-copy">
+                    <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank"><img src = "img/invisibleillness.png" alt = "Prev"></a>
                       <h2>Invisible Illness</h2>
                       <p>A group effort combining 3 developers and one designer from the General Assembly User Experience class, the focus of the project was to tell the stories of people with invisible illnesses. Users could post personal stories, find links for more information and even contribute to a charity if they wished to do so.  This was before learning javascript and therefore I had to take the designer’s proofs and create a front-end using solely CSS layouts and animation.  I am proud of this project because the team worked well together and met the "client's" expectations with the minimal front-end experience we had at that time.</p>
                   </div>
-                  <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank"><img src = "img/invisibleillness.png" alt = "Prev"></a>
-              </div>
+                </div>
 
               <div class = "slide">
                   <div class = "slide-copy">
+                    <a href = "https://pacific-plains-7067.herokuapp.com/" target="_blank"><img src = "img/vineyard.png" alt = "Prev"></a>
                       <h2>Vineyard Itinerary</h2>
                       <p>Creating a map of vineyards in the Shenandoah Valley was my third project for General Assembly. Using both the Google Maps and Yelp APIs, the goal of the site was to allow users to add entries from the Yelp API to a Google map and create a custom wine tour.  Though the Google Maps portion proved to be a little difficult with the deadline given, I was able get a deeper understanding of the Yelp API using the "bounding box" function since the Shenandoah Valley is not a metropolitan area.  This project definitely aided in my overall comprehension of APIs.</p>
                   </div>
-                  <a href = "https://pacific-plains-7067.herokuapp.com/" target="_blank"><img src = "img/vineyard.png" alt = "Prev"></a>
               </div>
 
               <div class = "slide">
                   <div class = "slide-copy">
+                    <a href = "https://lit-bayou-1476.herokuapp.com/" target="_blank"><img src = "img/cookbook.png" alt = "Prev"></a>
                       <h2>Keith's Cookbook</h2>
                       <p>My final project for General Assembly, a Ruby on Rails app that enables users to upload and comment on recipes.  This was my first time implementing AJAX and jQuery on a project as well as experimenting with the Materialize CSS framework. The AJAX functionality can be seen when you add comments to the recipes without a page reload. Though not as robust as other websites, I am very proud of this app and shows how far I have come since starting General Assembly in March.</p>
                   </div>
-                  <a href = "https://lit-bayou-1476.herokuapp.com/" target="_blank"><img src = "img/cookbook.png" alt = "Prev"></a>
               </div>
         </div>
           <img src = "img/arrow-right.png" alt = "next" id = "next">
