added final tweaks to responsive design for phones in portrait mode.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>The Portfolio of Keith Knox</title>
-      <link rel="stylesheet" type="text/css" href="css/style.css">      
+      <link rel="stylesheet" type="text/css" href="css/style.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
       <script src="js/script.js"></script>
       <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
@@ -37,7 +37,7 @@
                   <div class = "slide-copy">
                     <a href = "https://salty-journey-2304.herokuapp.com/" target="_blank"><img src = "img/invisibleillness.png" alt = "Prev"></a>
                       <h2>Invisible Illness</h2>
-                      <p>A group effort combining 3 developers and one designer from the General Assembly User Experience class, the focus of the project was to tell the stories of people with invisible illnesses. Users could post personal stories, find links for more information and even contribute to a charity if they wished to do so.  This was before learning javascript and therefore I had to take the designer’s proofs and create a front-end using solely CSS layouts and animation.  I am proud of this project because the team worked well together and met the "client's" expectations with the minimal front-end experience we had at that time.</p>
+                      <p>A group effort combining 3 developers and one designer from the General Assembly User Experience class, the focus of the project was to tell the stories of people with invisible illnesses. Users could post personal stories, find links for more information and even contribute to a charity if they wished to do so.  This was before learning javascript and therefore I had to take the designer&#8217s proofs and create a front-end using solely CSS layouts and animation.  I am proud of this project because the team worked well together and met the "client's" expectations with the minimal front-end experience we had at that time.</p>
                   </div>
                 </div>
 
